--- a/logica.html
+++ b/logica.html
@@ -6,17 +6,17 @@
     <title>Lógica de Programación</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="back-logica">
+
     <a href="index.html">Regresar</a>
 
     <br><br>
 
-    <center><h1>Lógica de Programación</h1></center>
+    <center><h1 class="h1-logica">Lógica de Programación</h1></center>
 
     <br><br><br>
 
-    <h2>¿Qué es la Lógica de Programación?</h2>
+    <h2 class="h2-logica">¿Qué es la Lógica de Programación?</h2>
     <p>Lógica de Programación es el conjunto de métodos y técnicas utilizados para diseñar, implementar, y mantener software. Este campo se centra en la resolución de problemas y la creación de sistemas de software que permiten al usuario interactuar con la información de manera efectiva y segura.</p>
 
     <br><br><br>
