--- a/redes.html
+++ b/redes.html
@@ -6,7 +6,7 @@
     <title>Redes</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="back-redes">
 
     <a href="index.html">Regresar</a>
 
@@ -21,15 +21,15 @@
 
     <br><br><br>
 
-    <h2>Clasificación de redes</h2>
-    <p>Las redes pueden ser clasificadas según su naturaleza y su función:</p>
+    <h3>Temas de Redes:</h3>
     
     <ul type="circle" >
-        <li>Redes de datos: Sistemas que transmiten y almacenan información.</li>
-        <li>Redes de comunicación: Sistemas que permiten la transmisión y la comunicación de información entre nodos.</li>
-        <li>Redes de seguridad: Sistemas que protegen y controlan la información transmitida en redes.</li>
-        <li>Redes de control de acceso: Sistemas que controlan el acceso a sistemas y recursos.</li>
-        <li>Redes de telecomunicación: Sistemas que permiten la transmisión y la comunicación de señales de voz, audio y video.</li>
+        <li>Redes de datos</li>
+        <li>Redes de comunicación</li>
+        <li>Redes de seguridad</li>
+        <li>Redes de sistemas</li>
+        <li>Redes de localización global</li>
+        <li>Redes de inteligencia artificial</li>
     </ul>
 
 </body>
