--- a/bases_datos.html
+++ b/bases_datos.html
@@ -6,7 +6,7 @@
     <title>Base de Datos</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="back-bases">
 
     <a href="index.html">Regresar</a>
     <br><br>
