--- a/logica.html
+++ b/logica.html
@@ -8,7 +8,7 @@
 </head>
 <body class="back-logica">
 
-    <a href="index.html">Regresar</a>
+    <a class="regresar-logica"  href="index.html">Regresar</a>
 
     <br><br>
 
@@ -17,13 +17,13 @@
     <br><br><br>
 
     <h2 class="h2-logica">¿Qué es la Lógica de Programación?</h2>
-    <p>Lógica de Programación es el conjunto de métodos y técnicas utilizados para diseñar, implementar, y mantener software. Este campo se centra en la resolución de problemas y la creación de sistemas de software que permiten al usuario interactuar con la información de manera efectiva y segura.</p>
+    <p class="p-logica">Lógica de Programación es el conjunto de métodos y técnicas utilizados para diseñar, implementar, y mantener software. Este campo se centra en la resolución de problemas y la creación de sistemas de software que permiten al usuario interactuar con la información de manera efectiva y segura.</p>
 
     <br><br><br>
 
-    <h3>Temas de Lógica de Programación</h2>
+    <h3 class="h3-logica">Temas de Lógica de Programación</h2>
 
-    <ul type="circle" >
+    <ul class="ul-logica" type="circle" >
         <li>Algoritmos</li>
         <li>Análisis</li>
         <li>Diagrama de flujo</li>
