--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <th>Descripción</th>
         </tr>
         <tr>
-            <td><img src="logica.png" alt="Lógica de Programación"></td>
+            <td><img src="./images/logica.png" alt="Lógica de Programación"></td>
             <td><a href="logica.html">Desarrollo de Lógica de Programación</a></td>
         </tr>
         <tr>
-            <td><img src="redes.png" alt="Redes"></td>
+            <td><img src="./images/redes.png" alt="Redes"></td>
             <td><a href="redes.html">Redes</a></td>
         </tr>
         <tr>
-            <td><img src="bases_datos.jpg" alt="Bases de Datos"></td>
+            <td><img src="./images/bases_datos.jpg" alt="Bases de Datos"></td>
             <td><a href="bases_datos.html">Diseño de Bases de Datos</a></td>
         </tr>
         <tr>
-            <td><img src="youtube.jpg" alt="Youtube"></td>
+            <td><img src="./images/youtube.jpg" alt="Youtube"></td>
             <td><a href="https://www.youtube.com" target="_blank">Visitar YouTube</a></td>
         </tr>
     </table>
